--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Habit Tracker</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Jane's Habit Tracker</h1>
+
+  <!-- Hang React App Here -->
   <div id="root"></div>
 
   <!-- script for webpack and webpack-dev-server challenge -->
-  <script src="build/bundle.js"></script>
+  <script src="./build/bundle.js"></script>
 
-  <!-- uncomment below and comment out the tag above for gulp/browserify challenge -->
-  <!-- <script src="build/browserify-bundle.js"></script> -->
 </body>
 </html>
